charts/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  namespace: formazione-sou
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: formazionesou.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: formazione-sou-service
            port:
              number: 80
